# ShooterGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert
include/core/: utils.h
include/graphics/: handler.h  types.h
src/: main.c
src/core/: utils.c
src/graphics/: types.c
